--- a/series.conf
+++ b/series.conf
@@ -14103,6 +14103,7 @@
 	patches.suse/1092-drm-amdgpu-vpe-remove-IB-end-boundary-requirement.patch
 	patches.suse/1093-drm-amdgpu-vpe-align-with-mcbp-changes.patch
 	patches.suse/1094-drm-amdgpu-Address-member-gart_placement-not-describ.patch
+	patches.suse/1095-drm-amdgpu-vpe-fix-insert_nop-ops.patch
 	patches.suse/drm-radeon-fix-a-possible-null-pointer-dereference.patch
 	patches.suse/drm-amdgpu-vkms-fix-a-possible-null-pointer-derefere.patch
 	patches.suse/drm-mediatek-Fix-coverity-issue-with-unintentional-i.patch
