--- a/series.conf
+++ b/series.conf
@@ -14105,6 +14105,7 @@
 	patches.suse/1094-drm-amdgpu-Address-member-gart_placement-not-describ.patch
 	patches.suse/1095-drm-amdgpu-vpe-fix-insert_nop-ops.patch
 	patches.suse/1096-drm-amd-pm-wait-for-completion-of-the-EnableGfxImu-c.patch
+	patches.suse/1097-drm-amdgpu-Return-EINVAL-when-MMSCH-init-status-inco.patch
 	patches.suse/drm-radeon-fix-a-possible-null-pointer-dereference.patch
 	patches.suse/drm-amdgpu-vkms-fix-a-possible-null-pointer-derefere.patch
 	patches.suse/drm-mediatek-Fix-coverity-issue-with-unintentional-i.patch
