--- a/series.conf
+++ b/series.conf
@@ -14107,6 +14107,7 @@
 	patches.suse/1096-drm-amd-pm-wait-for-completion-of-the-EnableGfxImu-c.patch
 	patches.suse/1097-drm-amdgpu-Return-EINVAL-when-MMSCH-init-status-inco.patch
 	patches.suse/1098-drm-amd-pm-Update-metric-table-for-smu-v13_0_6.patch
+	patches.suse/1099-drm-amd-pm-Add-gpu_metrics_v1_4.patch
 	patches.suse/drm-radeon-fix-a-possible-null-pointer-dereference.patch
 	patches.suse/drm-amdgpu-vkms-fix-a-possible-null-pointer-derefere.patch
 	patches.suse/drm-mediatek-Fix-coverity-issue-with-unintentional-i.patch
