--- a/series.conf
+++ b/series.conf
@@ -14113,6 +14113,7 @@
 	patches.suse/1102-drm-amdgpu-umsch-fix-psp-frontdoor-loading.patch
 	patches.suse/1103-drm-amdgpu-umsch-power-on-off-UMSCH-by-DLDO.patch
 	patches.suse/1104-drm-amdgpu-swsmu-add-smu-v14_0_0-driver-if-file.patch
+	patches.suse/1105-drm-amd-swsmu-add-smu-v14_0_0-ppsmc-file.patch
 	patches.suse/drm-radeon-fix-a-possible-null-pointer-dereference.patch
 	patches.suse/drm-amdgpu-vkms-fix-a-possible-null-pointer-derefere.patch
 	patches.suse/drm-mediatek-Fix-coverity-issue-with-unintentional-i.patch
