--- a/series.conf
+++ b/series.conf
@@ -14115,6 +14115,7 @@
 	patches.suse/1104-drm-amdgpu-swsmu-add-smu-v14_0_0-driver-if-file.patch
 	patches.suse/1105-drm-amd-swsmu-add-smu-v14_0_0-ppsmc-file.patch
 	patches.suse/1106-drm-amd-swsmu-add-smu-v14_0_0-pmfw-if-file.patch
+	patches.suse/1107-drm-amd-swsmu-add-smu14-ip-support.patch
 	patches.suse/drm-radeon-fix-a-possible-null-pointer-dereference.patch
 	patches.suse/drm-amdgpu-vkms-fix-a-possible-null-pointer-derefere.patch
 	patches.suse/drm-mediatek-Fix-coverity-issue-with-unintentional-i.patch
