--- a/series.conf
+++ b/series.conf
@@ -14117,6 +14117,7 @@
 	patches.suse/1106-drm-amd-swsmu-add-smu-v14_0_0-pmfw-if-file.patch
 	patches.suse/1107-drm-amd-swsmu-add-smu14-ip-support.patch
 	patches.suse/1108-drm-amdgpu-discovery-add-SMU-14-support.patch
+	patches.suse/1109-drm-amdgpu-add-support-to-powerup-VPE-by-SMU.patch
 	patches.suse/drm-radeon-fix-a-possible-null-pointer-dereference.patch
 	patches.suse/drm-amdgpu-vkms-fix-a-possible-null-pointer-derefere.patch
 	patches.suse/drm-mediatek-Fix-coverity-issue-with-unintentional-i.patch
