--- a/series.conf
+++ b/series.conf
@@ -14119,6 +14119,7 @@
 	patches.suse/1108-drm-amdgpu-discovery-add-SMU-14-support.patch
 	patches.suse/1109-drm-amdgpu-add-support-to-powerup-VPE-by-SMU.patch
 	patches.suse/1110-drm-amdgpu-add-power-up-down-UMSCH-ppt-callback.patch
+	patches.suse/1111-drm-amdgpu-add-support-to-power-up-down-UMSCH-by-SMU.patch
 	patches.suse/drm-radeon-fix-a-possible-null-pointer-dereference.patch
 	patches.suse/drm-amdgpu-vkms-fix-a-possible-null-pointer-derefere.patch
 	patches.suse/drm-mediatek-Fix-coverity-issue-with-unintentional-i.patch
