--- a/series.conf
+++ b/series.conf
@@ -3648,6 +3648,7 @@
 	patches.kernel.org/6.6.17-071-af_unix-Call-kfree_skb-for-dead-unix_-sk-oob_s.patch
 	patches.kernel.org/6.6.17-072-ppp_async-limit-MRU-to-64K.patch
 	patches.kernel.org/6.6.17-073-selftests-cmsg_ipv6-repeat-the-exact-packet.patch
+	patches.kernel.org/6.6.17-074-netfilter-nft_compat-narrow-down-revision-to-u.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
