--- a/series.conf
+++ b/series.conf
@@ -3686,6 +3686,7 @@
 	patches.kernel.org/6.6.17-109-xhci-process-isoc-TD-properly-when-there-was-a.patch
 	patches.kernel.org/6.6.17-110-xhci-handle-isoc-Babble-and-Buffer-Overrun-eve.patch
 	patches.kernel.org/6.6.17-111-usb-dwc3-pci-add-support-for-the-Intel-Arrow-L.patch
+	patches.kernel.org/6.6.17-112-hrtimer-Report-offline-hrtimer-enqueue.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
