--- a/series.conf
+++ b/series.conf
@@ -3678,6 +3678,7 @@
 	patches.kernel.org/6.6.17-101-ALSA-usb-audio-add-quirk-for-RODE-NT-USB.patch
 	patches.kernel.org/6.6.17-102-USB-serial-qcserial-add-new-usb-id-for-Dell-Wi.patch
 	patches.kernel.org/6.6.17-103-USB-serial-option-add-Fibocom-FM101-GL-variant.patch
+	patches.kernel.org/6.6.17-104-USB-serial-cp210x-add-ID-for-IMST-iM871A-USB.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
