--- a/series.conf
+++ b/series.conf
@@ -3624,6 +3624,7 @@
 	patches.kernel.org/6.6.17-047-wifi-brcmfmac-Adjust-n_channels-usage-for-__co.patch
 	patches.kernel.org/6.6.17-048-netdevsim-avoid-potential-loop-in-nsim_dev_tra.patch
 	patches.kernel.org/6.6.17-049-net-atlantic-Fix-DMA-mapping-for-PTP-hwts-ring.patch
+	patches.kernel.org/6.6.17-050-selftests-net-cut-more-slack-for-gro-fwd-tests.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
