--- a/series.conf
+++ b/series.conf
@@ -3687,6 +3687,7 @@
 	patches.kernel.org/6.6.17-110-xhci-handle-isoc-Babble-and-Buffer-Overrun-eve.patch
 	patches.kernel.org/6.6.17-111-usb-dwc3-pci-add-support-for-the-Intel-Arrow-L.patch
 	patches.kernel.org/6.6.17-112-hrtimer-Report-offline-hrtimer-enqueue.patch
+	patches.kernel.org/6.6.17-113-Input-i8042-fix-strange-behavior-of-touchpad-o.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
