--- a/series.conf
+++ b/series.conf
@@ -3682,6 +3682,7 @@
 	patches.kernel.org/6.6.17-105-Revert-usb-typec-tcpm-fix-cc-role-at-port-rese.patch
 	patches.kernel.org/6.6.17-106-x86-lib-Revert-to-_ASM_EXTABLE_UA-for-get-put-.patch
 	patches.kernel.org/6.6.17-107-usb-dwc3-host-Set-XHCI_SG_TRB_CACHE_SIZE_QUIRK.patch
+	patches.kernel.org/6.6.17-108-usb-host-xhci-plat-Add-support-for-XHCI_SG_TRB.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
