--- a/series.conf
+++ b/series.conf
@@ -3580,6 +3580,7 @@
 	patches.kernel.org/6.6.17-003-dmaengine-ti-k3-udma-Report-short-packet-error.patch
 	patches.kernel.org/6.6.17-004-dmaengine-fsl-qdma-Fix-a-memory-leak-related-t.patch
 	patches.kernel.org/6.6.17-005-dmaengine-fsl-qdma-Fix-a-memory-leak-related-t.patch
+	patches.kernel.org/6.6.17-006-phy-renesas-rcar-gen3-usb2-Fix-returning-wrong.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
