--- a/series.conf
+++ b/series.conf
@@ -16931,6 +16931,7 @@
 	patches.suse/net-mdio-add-2.5g-and-5g-related-PMA-speed-constants.patch
 	patches.suse/net-phy-realtek-use-generic-MDIO-constants.patch
 	patches.suse/net-phy-realtek-add-5Gbps-support-to-rtl822x_config_.patch
+	patches.suse/0001-lib-stackdepot-Fix-first-entry-having-a-0-handle.patch
 
 	########################################################
 	# kbuild/module infrastructure fixes
