--- a/series.conf
+++ b/series.conf
@@ -3903,6 +3903,7 @@
 	patches.kernel.org/6.6.18-199-nilfs2-fix-hang-in-nilfs_lookup_dirty_data_buf.patch
 	patches.kernel.org/6.6.18-200-crypto-ccp-Fix-null-pointer-dereference-in-__s.patch
 	patches.kernel.org/6.6.18-201-crypto-algif_hash-Remove-bogus-SGL-free-on-zer.patch
+	patches.kernel.org/6.6.18-202-nfp-use-correct-macro-for-LengthSelect-in-BAR-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
