--- a/series.conf
+++ b/series.conf
@@ -3885,6 +3885,7 @@
 	patches.kernel.org/6.6.18-181-serial-max310x-prevent-infinite-while-loop-in-.patch
 	patches.kernel.org/6.6.18-182-ftrace-Fix-DIRECT_CALLS-to-use-SAVE_REGS-by-de.patch
 	patches.kernel.org/6.6.18-183-powerpc-64-Set-task-pt_regs-link-to-the-LR-val.patch
+	patches.kernel.org/6.6.18-184-powerpc-cputable-Add-missing-PPC_FEATURE_BOOKE.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
