--- a/series.conf
+++ b/series.conf
@@ -3822,6 +3822,7 @@
 	patches.kernel.org/6.6.18-118-Revert-drm-amd-flush-any-delayed-gfxoff-on-sus.patch
 	patches.kernel.org/6.6.18-119-Revert-drm-msm-gpu-Push-gpu-lock-down-past-run.patch
 	patches.kernel.org/6.6.18-120-connector-cn_proc-revert-connector-Fix-proc_ev.patch
+	patches.kernel.org/6.6.18-121-drm-virtio-Set-segment-size-for-virtio_gpu-dev.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
