--- a/series.conf
+++ b/series.conf
@@ -8810,6 +8810,7 @@
 	patches.suse/Documentation-ACPI-Use-all-string-data-node-referenc.patch
 	patches.suse/PM-EM-Fix-potential-division-by-zero-error-in-em_com.patch
 	patches.suse/cpufreq-amd-pstate-Move-max_perf-limiting-in-amd_pstate_update.patch
+	patches.suse/cpufreq-amd-pstate-Add-offline-online-and-suspend-callbacks-for-amd_pstate_driver.patch
 	patches.suse/PM-wakeup-Delete-space-in-the-end-of-string-shown-by.patch
 	patches.suse/PM-sleep-Print-PM-debug-messages-during-hibernation.patch
 	patches.suse/xen-x86-fix-initial-memory-balloon-target.patch
