--- a/blacklist.conf
+++ b/blacklist.conf
@@ -907,3 +907,4 @@ f92bb7436802f8eb7ee72dc911a33c8897fde366 # CVE-2025-37977 bsc#1243510
 cd3c93167da0e760b5819246eae7a4ea30fd014b # refactoring, also 20250611131241.6ff7cf5d@kernel.org
 ee62ce7a1d909ccba0399680a03c2dee83bcae95 # mostly only required for broken hardware, also see 20250611131241.6ff7cf5d@kernel.org
 bc07fb417007b323d34651be20b9135480a947dc # cleanup, not a fix
+2b523c46e81ebd621515ab47117f95de197dfcbf # feature, not a fix
