--- a/blacklist.conf
+++ b/blacklist.conf
@@ -908,3 +908,4 @@ cd3c93167da0e760b5819246eae7a4ea30fd014b # refactoring, also 20250611131241.6ff7
 ee62ce7a1d909ccba0399680a03c2dee83bcae95 # mostly only required for broken hardware, also see 20250611131241.6ff7cf5d@kernel.org
 bc07fb417007b323d34651be20b9135480a947dc # cleanup, not a fix
 2b523c46e81ebd621515ab47117f95de197dfcbf # feature, not a fix
+535677e44d57a31e1363529b5ecddb92653d7136 # cleanup, not a fix
