--- a/blacklist.conf
+++ b/blacklist.conf
@@ -909,3 +909,4 @@ ee62ce7a1d909ccba0399680a03c2dee83bcae95 # mostly only required for broken hardw
 bc07fb417007b323d34651be20b9135480a947dc # cleanup, not a fix
 2b523c46e81ebd621515ab47117f95de197dfcbf # feature, not a fix
 535677e44d57a31e1363529b5ecddb92653d7136 # cleanup, not a fix
+d2f94dccab8319063dd1fbc1738b4a280c2e4009 # cleanup, not a fix
