--- a/series.conf
+++ b/series.conf
@@ -32700,6 +32700,7 @@
 	patches.suse/usb-renesas_usbhs-Reorder-clock-handling-and-power-m.patch
 	patches.suse/usb-common-usb-conn-gpio-use-a-unique-name-for-usb-c.patch
 	patches.suse/usb-potential-integer-overflow-in-usbg_make_tpg.patch
+	patches.suse/usb-dwc2-also-exit-clock_gating-when-stopping-udc-wh.patch
 	patches.suse/usb-typec-ucsi-fix-Clang-Wsign-conversion-warning.patch
 	patches.suse/thunderbolt-Do-not-double-dequeue-a-configuration-re.patch
 	patches.suse/thunderbolt-Fix-a-logic-error-in-wake-on-connect.patch
