--- a/series.conf
+++ b/series.conf
@@ -32674,6 +32674,7 @@
 	patches.suse/gve-add-missing-NULL-check-for-gve_alloc_pending_pac.patch
 	patches.suse/PM-sleep-Fix-power.is_suspended-cleanup-for-direct-c.patch
 	patches.suse/drm-i915-gem-Allow-EXEC_CAPTURE-on-recoverable-conte.patch
+	patches.suse/drm-amdgpu-amdgpu_vram_mgr_new-Clamp-lpfn-to-total-v.patch
 	patches.suse/drm-amd-display-Add-null-pointer-check-for-get_first.patch
 	patches.suse/bus-mhi-host-Fix-conflict-between-power_up-and-SYSER.patch
 	patches.suse/iio-adc-ad7606_spi-fix-reg-write-value-mask.patch
