--- a/series.conf
+++ b/series.conf
@@ -32643,6 +32643,7 @@
 	patches.suse/PCI-cadence-Fix-runtime-atomic-count-underflow.patch
 	patches.suse/PCI-dw-rockchip-Remove-PCIE_L0S_ENTRY-check-from-roc.patch
 	patches.suse/PCI-dw-rockchip-Fix-PHY-function-call-sequence-in-ro.patch
+	patches.suse/PCI-dwc-Make-link-training-more-robust-by-setting-PO.patch
 	patches.suse/phy-qcom-qmp-usb-Fix-an-NULL-vs-IS_ERR-bug.patch
 	patches.suse/dmaengine-ti-Add-NULL-check-in-udma_probe.patch
 	patches.suse/rtc-sh-assign-correct-interrupts-with-DT.patch
