--- a/series.conf
+++ b/series.conf
@@ -29597,6 +29597,7 @@
 	patches.suse/driver-core-fw_devlink-Stop-trying-to-optimize-cycle.patch
 	patches.suse/firmware_loader-Fix-possible-resource-leak-in-fw_log.patch
 	patches.suse/misc-apds990x-Fix-missing-pm_runtime_disable.patch
+	patches.suse/types-Complement-the-aligned-types-with-signed-64-bi.patch
 	patches.suse/iio-light-al3010-Fix-an-error-handling-path-in-al301.patch
 	patches.suse/iio-adc-ad7606-Fix-typo-in-the-driver-name.patch
 	patches.suse/goldfish-Fix-unused-const-variable-goldfish_pipe_acp.patch
