--- a/series.conf
+++ b/series.conf
@@ -32646,6 +32646,7 @@
 	patches.suse/PCI-dwc-Make-link-training-more-robust-by-setting-PO.patch
 	patches.suse/phy-qcom-qmp-usb-Fix-an-NULL-vs-IS_ERR-bug.patch
 	patches.suse/dmaengine-xilinx_dma-Set-dma_device-directions.patch
+	patches.suse/dmaengine-idxd-Check-availability-of-workqueue-alloc.patch
 	patches.suse/dmaengine-ti-Add-NULL-check-in-udma_probe.patch
 	patches.suse/rtc-sh-assign-correct-interrupts-with-DT.patch
 	patches.suse/rtc-at91rm9200-drop-unused-module-alias.patch
