--- a/series.conf
+++ b/series.conf
@@ -32624,6 +32624,7 @@
 	patches.suse/hwmon-asus-ec-sensors-check-sensor-index-in-read_str.patch
 	patches.suse/mfd-exynos-lpass-Avoid-calling-exynos_lpass_disable-.patch
 	patches.suse/mfd-stmpe-spi-Correct-the-name-used-in-MODULE_DEVICE.patch
+	patches.suse/mfd-max14577-Fix-wakeup-source-leaks-on-device-unbin.patch
 	patches.suse/backlight-pm8941-Add-NULL-check-in-wled_configure.patch
 	patches.suse/fs-nfs-read-fix-double-unlock-bug-in-nfs_return_empty_folio.patch
 	patches.suse/nfs-clear-SB_RDONLY-before-getting-superblock.patch
