--- a/series.conf
+++ b/series.conf
@@ -32729,6 +32729,7 @@
 	patches.suse/ALSA-hda-Add-new-pci-id-for-AMD-GPU-display-HD-audio.patch
 	patches.suse/ALSA-hda-Ignore-unsol-events-for-cards-being-shut-do.patch
 	patches.suse/ALSA-usb-audio-Add-implicit-feedback-quirk-for-RODE-.patch
+	patches.suse/ASoC-codecs-wcd9335-Fix-missing-free-of-regulator-su.patch
 	patches.suse/ASoC-codecs-hda-Fix-RPM-usage-count-underflow.patch
 	patches.suse/ASoC-Intel-avs-Fix-deadlock-when-the-failing-IPC-is-.patch
 	patches.suse/ASoC-Intel-avs-Verify-content-returned-by-parse_int_.patch
