--- a/series.conf
+++ b/series.conf
@@ -32620,6 +32620,7 @@
 	patches.suse/mtd-rawnand-sunxi-Add-randomizer-configuration-in-su.patch
 	patches.suse/Input-gpio-keys-fix-possible-concurrent-access-in-gp.patch
 	patches.suse/Input-ims-pcu-check-record-size-in-ims_pcu_flash_fir.patch
+	patches.suse/hwmon-pmbus-max34440-Fix-support-for-max34451.patch
 	patches.suse/hwmon-asus-ec-sensors-check-sensor-index-in-read_str.patch
 	patches.suse/mfd-exynos-lpass-Avoid-calling-exynos_lpass_disable-.patch
 	patches.suse/mfd-stmpe-spi-Correct-the-name-used-in-MODULE_DEVICE.patch
