--- a/series.conf
+++ b/series.conf
@@ -53705,6 +53705,7 @@
 	patches.suse/drm-i915-pmu-Fix-build-error-with-GCOV-and-AutoFDO-e.patch
 	patches.suse/drm-i915-dsi-Fix-off-by-one-in-BXT_MIPI_TRANS_VTOTAL.patch
 	patches.suse/drm-amd-display-Fix-mpv-playback-corruption-on-westo.patch
+	patches.suse/drm-amd-display-Fix-RMCM-programming-seq-errors.patch
 	patches.suse/drm-amdgpu-switch-job-hw_fence-to-amdgpu_fence.patch
 	patches.suse/drm-ssd130x-fix-ssd132x_clear_screen-columns.patch
 	patches.suse/drm-nouveau-bl-increase-buffer-size-to-avoid-truncat.patch
