--- a/series.conf
+++ b/series.conf
@@ -53716,6 +53716,7 @@
 	patches.suse/drm-etnaviv-Protect-the-scheduler-s-pending-list-wit.patch
 	patches.suse/drm-xe-bmg-Update-Wa_16023588340.patch
 	patches.suse/drm-xe-Fix-memset-on-iomem.patch
+	patches.suse/drm-xe-Fix-early-wedge-on-GuC-load-failure.patch
 	patches.suse/ALSA-hda-intel-Add-Thinkpad-E15-to-PM-deny-list.patch
 	patches.suse/ALSA-hda-realtek-Fix-built-in-mic-on-ASUS-VivoBook-X.patch
 	patches.suse/ALSA-usb-audio-Rename-ALSA-kcontrol-PCM-and-PCM1-for.patch
