--- a/series.conf
+++ b/series.conf
@@ -33052,6 +33052,7 @@
 	patches.suse/usb-net-sierra-check-for-no-status-endpoint.patch
 	patches.suse/Bluetooth-Fix-null-ptr-deref-in-l2cap_sock_resume_cb.patch
 	patches.suse/Bluetooth-hci_sync-fix-connectable-extended-advertis.patch
+	patches.suse/Bluetooth-SMP-If-an-unallowed-command-is-received-co.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
