--- a/series.conf
+++ b/series.conf
@@ -33055,6 +33055,7 @@
 	patches.suse/Bluetooth-SMP-If-an-unallowed-command-is-received-co.patch
 	patches.suse/Bluetooth-SMP-Fix-using-HCI_ERROR_REMOTE_USER_TERM-o.patch
 	patches.suse/Bluetooth-btusb-QCA-Fix-downloading-wrong-NVM-for-WC.patch
+	patches.suse/Bluetooth-L2CAP-Fix-attempting-to-adjust-outgoing-MT.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
