--- a/series.conf
+++ b/series.conf
@@ -10059,6 +10059,7 @@
 	patches.suse/pwm-mediatek-Ensure-to-disable-clocks-in-error-path.patch
 	patches.suse/pinctrl-qcom-msm-mark-certain-pins-as-invalid-for-in.patch
 	patches.suse/pinctrl-amd-Clear-GPIO-debounce-for-suspend.patch
+	patches.suse/KVM-TDX-Exit-to-userspace-for-SetupEventNotifyInterr.patch
 	patches.suse/KVM-SVM-Reject-SEV-ES-intra-host-migration-if-vCPU-c.patch
 	patches.suse/KVM-x86-xen-Allow-out-of-range-event-channel-ports-i.patch
 	patches.suse/KVM-x86-avoid-underflow-when-scaling-TSC-frequency.patch
