--- a/series.conf
+++ b/series.conf
@@ -8619,6 +8619,7 @@
 	patches.suse/kunit-Fix-checksum-tests-on-big-endian-CPUs.patch
 	patches.suse/Bluetooth-btnxpuart-Remove-check-for-CTS-low-after-F.patch
 	patches.suse/Bluetooth-hci_sync-Fix-UAF-in-hci_disconnect_all_syn.patch
+	patches.suse/Bluetooth-hci_conn-Fix-sending-BT_HCI_CMD_LE_CREATE_.patch
 	patches.suse/Bluetooth-ISO-Use-defer-setup-to-separate-PA-sync-an.patch
 	patches.suse/Bluetooth-hci_conn-fail-SCO-ISO-via-hci_conn_failed-.patch
 	patches.suse/Bluetooth-btintel-Send-new-command-for-PPAG.patch
