--- a/series.conf
+++ b/series.conf
@@ -23008,6 +23008,7 @@
 	patches.suse/Bluetooth-hci_event-Remove-code-to-removed-CONFIG_BT.patch
 	patches.suse/Bluetooth-hci_conn-Fix-UAF-Write-in-__hci_acl_create.patch
 	patches.suse/Bluetooth-hci_sync-Add-helper-functions-to-manipulat.patch
+	patches.suse/Bluetooth-hci_sync-Attempt-to-dequeue-connection-att.patch
 	patches.suse/Bluetooth-hci_sync-Fix-UAF-on-hci_abort_conn_sync-7453847.patch
 	patches.suse/Bluetooth-hci_qca-don-t-use-IS_ERR_OR_NULL-with-gpio.patch
 	patches.suse/Bluetooth-btintel-Fixe-build-regression.patch
