--- a/series.conf
+++ b/series.conf
@@ -33089,6 +33089,7 @@
 	patches.suse/dmaengine-nbpfaxi-Fix-memory-corruption-in-probe.patch
 	patches.suse/soundwire-amd-fix-for-clearing-command-status-regist.patch
 	patches.suse/drm-amdgpu-gfx8-reset-compute-ring-wptr-on-the-GPU-o.patch
+	patches.suse/s390-bpf-Fix-bpf_arch_text_poke-with-new_addr-NULL-again.patch
 	patches.suse/hwmon-corsair-cpro-Validate-the-size-of-the-received.patch
 	patches.suse/Input-xpad-set-correct-controller-type-for-Acer-NGR2.patch
 	patches.suse/regmap-fix-potential-memory-leak-of-regmap_bus.patch
