--- a/series.conf
+++ b/series.conf
@@ -14519,6 +14519,7 @@
 	patches.suse/gpio-mockup-fix-kerneldoc.patch
 	patches.suse/gpio-mockup-remove-unused-field.patch
 	patches.suse/gpiolib-acpi-Add-a-ignore-interrupt-quirk-for-Peaq-C.patch
+	patches.suse/gpio-sim-include-a-missing-header.patch
 	patches.suse/gpiolib-make-gpio_device_get-and-gpio_device_put-pub.patch
 	patches.suse/gpiolib-provide-gpio_device_find.patch
 	patches.suse/gpio-sysfs-drop-the-mention-of-gpiochip_find-from-sy.patch
