--- a/series.conf
+++ b/series.conf
@@ -30421,6 +30421,7 @@
 	patches.suse/net-ethernet-ti-am65-cpsw-fix-freeing-IRQ-in-am65_cpsw_nuss_remove_tx_chns.patch
 	patches.suse/tcp_cubic-fix-incorrect-HyStart-round-start-detectio.patch
 	patches.suse/net-rose-prevent-integer-overflows-in-rose_setsockop.patch
+	patches.suse/gpio-pca953x-log-an-error-when-failing-to-get-the-re.patch
 	patches.suse/regulator-of-Implement-the-unwind-path-of-of_regulat.patch
 	patches.suse/spi-zynq-qspi-Add-check-for-clk_enable.patch
 	patches.suse/spi-atmel-quadspi-Create-atmel_qspi_ops-to-support-n.patch
