--- a/series.conf
+++ b/series.conf
@@ -2164,6 +2164,7 @@
 	patches.kernel.org/6.15.8-051-arm64-dts-freescale-imx8mm-verdin-Keep-LDO5-al.patch
 	patches.kernel.org/6.15.8-052-arm64-dts-imx8mp-venice-gw71xx-fix-TPM-SPI-fre.patch
 	patches.kernel.org/6.15.8-053-arm64-dts-imx8mp-venice-gw72xx-fix-TPM-SPI-fre.patch
+	patches.kernel.org/6.15.8-054-arm64-dts-imx8mp-venice-gw73xx-fix-TPM-SPI-fre.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
