--- a/series.conf
+++ b/series.conf
@@ -2182,6 +2182,7 @@
 	patches.kernel.org/6.15.8-069-net-libwx-remove-duplicate-page_pool_put_full_.patch
 	patches.kernel.org/6.15.8-070-net-libwx-fix-the-using-of-Rx-buffer-DMA.patch
 	patches.kernel.org/6.15.8-071-net-libwx-properly-reset-Rx-ring-descriptor.patch
+	patches.kernel.org/6.15.8-072-pmdomain-governor-Consider-CPU-latency-toleran.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
