--- a/series.conf
+++ b/series.conf
@@ -2169,6 +2169,7 @@
 	patches.kernel.org/6.15.8-056-arm64-dts-rockchip-use-cs-gpios-for-spi1-on-ri.patch
 	patches.kernel.org/6.15.8-057-af_packet-fix-the-SO_SNDTIMEO-constraint-not-e.patch
 	patches.kernel.org/6.15.8-058-af_packet-fix-soft-lockup-issue-caused-by-tpac.patch
+	patches.kernel.org/6.15.8-059-Bluetooth-btintel-Check-if-controller-is-ISO-c.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
