--- a/series.conf
+++ b/series.conf
@@ -2193,6 +2193,7 @@
 	patches.kernel.org/6.15.8-080-iio-adc-ad7380-fix-adi-gain-milli-property-par.patch
 	patches.kernel.org/6.15.8-081-iio-adc-adi-axi-adc-fix-ad7606_bus_reg_read.patch
 	patches.kernel.org/6.15.8-082-iio-adc-axp20x_adc-Add-missing-sentinel-to-AXP.patch
+	patches.kernel.org/6.15.8-083-iio-adc-max1363-Fix-MAX1363_4X_CHANS-MAX1363_8.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
