--- a/series.conf
+++ b/series.conf
@@ -2157,6 +2157,7 @@
 	patches.kernel.org/6.15.8-044-mptcp-make-fallback-action-and-fallback-decisi.patch
 	patches.kernel.org/6.15.8-045-mptcp-plug-races-between-subflow-fail-and-subf.patch
 	patches.kernel.org/6.15.8-046-mptcp-reset-fallback-status-gracefully-at-disc.patch
+	patches.kernel.org/6.15.8-047-phonet-pep-Move-call-to-pn_skb_get_dst_sockadd.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
