--- a/series.conf
+++ b/series.conf
@@ -2145,6 +2145,7 @@
 	patches.kernel.org/6.15.8-032-objtool-rust-add-one-more-noreturn-Rust-functi.patch
 	patches.kernel.org/6.15.8-033-drm-amdgpu-gfx8-reset-compute-ring-wptr-on-the.patch
 	patches.kernel.org/6.15.8-034-drm-panfrost-Fix-scheduler-workqueue-bug.patch
+	patches.kernel.org/6.15.8-035-drm-amdgpu-Increase-reset-counter-only-on-succ.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
