--- a/series.conf
+++ b/series.conf
@@ -2215,6 +2215,7 @@
 	patches.kernel.org/6.15.8-102-arm64-dts-imx95-19x19-evk-fix-the-overshoot-is.patch
 	patches.kernel.org/6.15.8-103-arm64-dts-imx95-15x15-evk-fix-the-overshoot-is.patch
 	patches.kernel.org/6.15.8-104-arm64-dts-imx95-Correct-the-DMA-interrupter-nu.patch
+	patches.kernel.org/6.15.8-105-bpf-Reject-p-format-string-in-bprintf-like-hel.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
