--- a/series.conf
+++ b/series.conf
@@ -2129,6 +2129,7 @@
 	patches.kernel.org/6.15.8-016-Revert-staging-vchiq_arm-Improve-initial-VCHIQ.patch
 	patches.kernel.org/6.15.8-017-Revert-staging-vchiq_arm-Create-keep-alive-thr.patch
 	patches.kernel.org/6.15.8-018-nvmem-imx-ocotp-fix-MAC-address-byte-length.patch
+	patches.kernel.org/6.15.8-019-nvmem-layouts-u-boot-env-remove-crc32-endianne.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
