--- a/series.conf
+++ b/series.conf
@@ -2227,6 +2227,7 @@
 	patches.kernel.org/6.15.8-114-smb-client-fix-use-after-free-in-cifs_oplock_b.patch
 	patches.kernel.org/6.15.8-115-fix-a-leak-in-fcntl_dirnotify.patch
 	patches.kernel.org/6.15.8-116-nvme-fix-inconsistent-RCU-list-manipulation-in.patch
+	patches.kernel.org/6.15.8-117-nvme-fix-endianness-of-command-word-prints-in-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
