--- a/series.conf
+++ b/series.conf
@@ -2206,6 +2206,7 @@
 	patches.kernel.org/6.15.8-093-comedi-Fail-COMEDI_INSNLIST-ioctl-if-n_insns-i.patch
 	patches.kernel.org/6.15.8-094-comedi-Fix-some-signed-shift-left-operations.patch
 	patches.kernel.org/6.15.8-095-comedi-Fix-use-of-uninitialized-data-in-insn_r.patch
+	patches.kernel.org/6.15.8-096-comedi-Fix-initialization-of-data-for-instruct.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
