--- a/series.conf
+++ b/series.conf
@@ -2152,6 +2152,7 @@
 	patches.kernel.org/6.15.8-039-netfs-Fix-race-between-cache-write-completion-.patch
 	patches.kernel.org/6.15.8-040-ALSA-hda-realtek-Fix-mute-LED-for-HP-Victus-16.patch
 	patches.kernel.org/6.15.8-041-ALSA-hda-realtek-Add-quirk-for-ASUS-ROG-Strix-.patch
+	patches.kernel.org/6.15.8-042-io_uring-poll-fix-POLLERR-handling.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
