--- a/series.conf
+++ b/series.conf
@@ -2229,6 +2229,7 @@
 	patches.kernel.org/6.15.8-116-nvme-fix-inconsistent-RCU-list-manipulation-in.patch
 	patches.kernel.org/6.15.8-117-nvme-fix-endianness-of-command-word-prints-in-.patch
 	patches.kernel.org/6.15.8-118-smc-Fix-various-oops-due-to-inet_sock-type-con.patch
+	patches.kernel.org/6.15.8-119-net-phy-Don-t-register-LEDs-for-genphy.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
