--- a/series.conf
+++ b/series.conf
@@ -2237,6 +2237,7 @@
 	patches.kernel.org/6.15.8-124-can-tcan4x5x-fix-reset-gpio-usage-during-probe.patch
 	patches.kernel.org/6.15.8-125-selftests-net-increase-inter-packet-timeout-in.patch
 	patches.kernel.org/6.15.8-126-hwmon-corsair-cpro-Validate-the-size-of-the-re.patch
+	patches.kernel.org/6.15.8-127-ice-add-NULL-check-in-eswitch-lag-check.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
