--- a/series.conf
+++ b/series.conf
@@ -2273,6 +2273,7 @@
 	patches.kernel.org/6.15.8-160-rxrpc-Fix-to-use-conn-aborts-for-conn-wide-fai.patch
 	patches.kernel.org/6.15.8-161-Revert-cgroup_freezer-cgroup_freezing-Check-if.patch
 	patches.kernel.org/6.15.8-162-drm-mediatek-Add-wait_event_timeout-when-disab.patch
+	patches.kernel.org/6.15.8-163-drm-mediatek-only-announce-AFBC-if-really-supp.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
