--- a/series.conf
+++ b/series.conf
@@ -2284,6 +2284,7 @@
 	patches.kernel.org/6.15.8-171-usb-dwc3-qcom-Don-t-leave-BCR-asserted.patch
 	patches.kernel.org/6.15.8-172-net-libwx-fix-multicast-packets-received-count.patch
 	patches.kernel.org/6.15.8-173-rust-use-used-compiler-to-fix-build-and-modpos.patch
+	patches.kernel.org/6.15.8-174-smb-smbdirect-add-smbdirect_pdu.h-with-protoco.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
