--- a/series.conf
+++ b/series.conf
@@ -2230,6 +2230,7 @@
 	patches.kernel.org/6.15.8-117-nvme-fix-endianness-of-command-word-prints-in-.patch
 	patches.kernel.org/6.15.8-118-smc-Fix-various-oops-due-to-inet_sock-type-con.patch
 	patches.kernel.org/6.15.8-119-net-phy-Don-t-register-LEDs-for-genphy.patch
+	patches.kernel.org/6.15.8-120-nvme-revert-the-cross-controller-atomic-write-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
