--- a/series.conf
+++ b/series.conf
@@ -2191,6 +2191,7 @@
 	patches.kernel.org/6.15.8-078-xfs-don-t-allocate-the-xfs_extent_busy-structu.patch
 	patches.kernel.org/6.15.8-079-iio-accel-fxls8962af-Fix-use-after-free-in-fxl.patch
 	patches.kernel.org/6.15.8-080-iio-adc-ad7380-fix-adi-gain-milli-property-par.patch
+	patches.kernel.org/6.15.8-081-iio-adc-adi-axi-adc-fix-ad7606_bus_reg_read.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
