--- a/series.conf
+++ b/series.conf
@@ -2222,6 +2222,7 @@
 	patches.kernel.org/6.15.8-109-ALSA-compress_offload-tighten-ioctl-command-nu.patch
 	patches.kernel.org/6.15.8-110-net-emaclite-Fix-missing-pointer-increment-in-.patch
 	patches.kernel.org/6.15.8-111-block-fix-kobject-leak-in-blk_unregister_queue.patch
+	patches.kernel.org/6.15.8-112-net-sched-sch_qfq-Fix-race-condition-on-qfq_ag.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
