--- a/series.conf
+++ b/series.conf
@@ -2171,6 +2171,7 @@
 	patches.kernel.org/6.15.8-058-af_packet-fix-soft-lockup-issue-caused-by-tpac.patch
 	patches.kernel.org/6.15.8-059-Bluetooth-btintel-Check-if-controller-is-ISO-c.patch
 	patches.kernel.org/6.15.8-060-cpuidle-psci-Fix-cpuhotplug-routine-with-PREEM.patch
+	patches.kernel.org/6.15.8-061-dmaengine-mediatek-Fix-a-flag-reuse-error-in-m.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
