--- a/series.conf
+++ b/series.conf
@@ -2256,6 +2256,7 @@
 	patches.kernel.org/6.15.8-143-ipv6-mcast-Delay-put-pmc-idev-in-mld_del_delre.patch
 	patches.kernel.org/6.15.8-144-net-fix-segmentation-after-TCP-UDP-fraglist-GR.patch
 	patches.kernel.org/6.15.8-145-netfilter-nf_conntrack-fix-crash-due-to-remova.patch
+	patches.kernel.org/6.15.8-146-drm-xe-Dont-skip-TLB-invalidations-on-VF.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
